# Careerlytics

./: .replit  README.md  app.py  database.py  pyproject.toml  replit_zip_error_log.txt
.local/share/virtualenv/wheel/3.12/image/1/CopyPipInstall/pip-24.2-py3-none-any/pip-24.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.13/image/1/CopyPipInstall/pip-24.2-py3-none-any/pip-24.2.dist-info/: RECORD
.upm/: store.json
templates/: about_company.html  application_form.html  application_submitted.html  banner.html  bootstrap.html  contact_us.html  footer.html  home.html  job_section.html  jobitem.html  jobpage.html  nav.html
