[tool.poetry]
name = "careerlytics"
version = "0.1.0"
description = ""
authors = ["Your Name"]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.0"
gunicorn = "^21.2.0"
sqlalchemy = "^2.0.0"
pymysql = "^1.1.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"